Alignment fix

--- a/src/app/featured-modules/generate-keys/generate-keys-home/generate-keys-home.component.scss
+++ b/src/app/featured-modules/generate-keys/generate-keys-home/generate-keys-home.component.scss
@@ -3,6 +3,7 @@
   background-color: #FFF5F2;
   color: #522D5B !important;
   position: relative;
+  text-align: center;
 
   &:focus, &:hover {
     box-shadow: 0 5px 10px 0 #3535357a;
